--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ github: http://github.com/momobs
 baseurl: ""
 description: Clean Code!
 meta_description: meta_desc
-motto: 야근할수록 실력은 줄어든다.
+motto: Simple & Clean.
 banner: banner
 
 #permalink: /:categories/:year/:month/:day/:title/
